# embed-file

./: CHANGELOG.md  default.nix  embed-file.cabal
src/: Main.hs
