cabal-version:       2.4
name:                embed-file
version:             0.1.0.0
synopsis:            Command line tool for file-embed
-- description:         
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable embed-file
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
      base ^>=4.12.0.0
    , bytestring >= 0.10.0 && < 0.11
    , file-embed ^>= 0.0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
